# moukey

./: CMakeLists.txt  README.md  main.cpp
include/: client.h  device.h  device_pool.h  event.h  moukey.h  server.h  util.h  virtual_device.h
scripts/: install_client.sh  install_core.sh  install_server.sh  moukey.cfg  moukey_client  moukey_install  moukey_install_core  moukey_location  moukey_register  moukey_register_client  moukey_run  moukey_server  moukey_uninstall
src/: client.cpp  device.cpp  device_client.cpp  device_display.cpp  device_list.cpp  device_pool.cpp  device_server.cpp  device_test.cpp  device_vd_test.cpp  event.cpp  moukey.cpp  server.cpp  virtual_device.cpp
